web-infras/parser/tests/fixtures/esprima/ES6/class/invalid-setter-method-rest/output.txt
[SyntaxError]: Setter function argument must not be a rest parameter (1,17)
1|class X { set f(...y) {} }
 |               ^
